Fixed overlapping of webinar carousel when reducing window size

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ body {
     'Lucida Sans', Arial, sans-serif;
 
   background-color: #ffffff;
+  min-width: 600px;
 }
 
 .text-color-primary {
